--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <![endif]-->
 
     <div ui-view class="app-container"></div>
+    <footer></footer>
 
     <!-- build:js(src) scripts/vendor.js -->
     <!-- bower:js -->
